--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ antlr4_package/__pycache__
 analysing_repos_java_modularity.log
 bgughwoighwi
 Repository_Commit_Data/*_data.json
+.ipynb_checkpoints/*
+Untitled.ipynb
