updated with code documentation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Data_Config_Info/*
 Untitled.ipynb
 .~lock.repository_mining_data.csv#
 analysing_repos_pattern_evolution.log
+Commit_Data/*
+Data_Config_Info/*
